# dotFiles

./: .conkyrc  .emacs  .gitconfig  .gitignore_global  .python-version  .tmux.conf  .zshrc  Makefile  README.md  atom-package-list.txt  desktopinfo.ini  pyproject.toml  requirements.txt
.atom/: config.cson  snippets.cson  styles.less
