[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ".files"
authors = ["Pierre-Emmanuel Emonides <pierreemmanuel.emonides@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
speedtest-cli = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
isort = "^5.10.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
]
